tests/neg/indentation2.stk
param pageWidth: Int

def phraseIndent =
  println "hello" allow stdin
    if 3 > 5 then println "error"   // error

def phraseIndent1 =
  println "world"
    with pageWidth = 10
      allow stdin

def phraseIndent2 =
  println "world"
    allow stdin with pageWidth = 10

def phraseIndent3 =
  println "world"
    with pageWidth = 10 allow stdin

def phraseIndent4 =
  println "world"
    with
       pageWidth = 10 allow stdin

def phraseIndent5 =
  println "world"
    allow stdin
    with pageWidth = 10

def phraseIndent6 =
  println "world"
    with pageWidth = 10
    allow stdin
